# stability-check

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-deploy.yml
configs/: door_restart_stability.yaml  scenario_template.yaml  stability_0001_reboot.yaml  stability_0009_wired_network.yaml
docs/: api-reference.md  index.md
docs/js/: mermaid-init.js
docs/plans/: 2026-07-13-autonomous-multiagent-design.md  2026-07-13-autonomous-multiagent-phase1-plan.md  2026-07-13-autonomous-multiagent-phase2-3-plan.md  2026-07-13-burnin-multiagent-design.md  2026-07-14-true-autonomous-redesign.md  2026-07-15-stability-harness-loop-multiagent-template.md  事件链索引.md  代码物理地图.md  决策日志.md  架构演进路线.md  系统架构.md  门禁对讲通用稳定性用例集.md  门禁对讲通用稳定性用例集.xlsx  门禁设备稳定性测试框架设计方案.md
docs/stylesheets/: extra.css
stability_harness_loop_multiagent/: __init__.py
stability_harness_loop_multiagent/business/: __init__.py
stability_harness_loop_multiagent/core/: __init__.py  agent.py  voting.py
stability_harness_loop_multiagent/examples/: __init__.py  _report.py  generic_harness.py  governance_panel_demo.py  hikvision_real_env.py  scenario_run.py  smoke.py
stability_harness_loop_multiagent/harness/: agent.py  bus.py  governance.py  runtime.py  telemetry.py  tracer.py  verify.py  watchdog.py
stability_harness_loop_multiagent/loop/: __init__.py  context.py  decision.py  driver.py  scheduler.py  termination.py
stability_harness_loop_multiagent/multi_agent/: adapter.py  protocols.py
tests/: conftest.py  test_burnin.py  test_client_httpx_unit.py  test_context.py  test_control_loop_event_driven.py  test_coordinator_decisions.py  test_generic_harness.py  test_governance.py  test_harness_regression.py  test_hikvision_adapter.py  test_hikvision_advisor.py  test_hikvision_client.py  test_hikvision_diagnostic.py  test_hikvision_e2e.py  test_hikvision_event_codes.py  test_hikvision_governance.py  test_hikvision_governance_advanced.py  test_hikvision_precond.py  test_hikvision_runner.py  test_hikvision_verify.py  test_hikvision_worker.py  test_integration.py  test_llm_plan.py  test_risk_analyst.py  test_scenario.py  test_scenario_schema.py  test_scribe.py  test_stability_harness_loop_multiagent_smoke.py  test_stability_scenario.py  test_tracer.py  test_trend_supervisor.py  test_verify.py
tests/agents/: config.py  device_client.py  event_check_agent.py  reboot_agent.py  report.py  status_check_agent.py  strategy.py  supervisor.py
tests/fakes/: __init__.py  fake_hikvision.py
tests/harness/: agent.py  analyst_agent.py  bus.py  context.py  coordinator.py  event_check_agent.py  llm_client.py  loader.py  notifier_agent.py  reboot_agent.py  reporter_agent.py  scribe_agent.py  status_check_agent.py  watch_agent.py  (+1 more)
(+58 files in other folders)
