[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stability-harness-loop-multiagent"
version = "0.1.0"
requires-python = ">=3.10"
description = "Domain-agnostic autonomous loop harness (three-engine architecture)"
dependencies = []  # 框架核心：零第三方运行时依赖，仅标准库（业务层依赖见 business extras）

[project.optional-dependencies]
# 业务层（business/hikvision）可选依赖：httpx/httpx-auth 真机 ISAPI、
# openai LLM 兜底、pydantic 校验、PyYAML 场景解析；框架核心仍零运行时依赖。
business = [
    "httpx>=0.27",
    "httpx-auth>=0.22",
    "openai>=1.40",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
# 示例脚本（examples/）的可选美化依赖：装了 rich 终端输出自动 CJK 对齐/表格，
# 不装则回退标准库宽度感知对齐；框架核心包不依赖它。
examples = ["rich>=13"]
# 文档站（GitHub Pages）：mkdocs-material + mkdocstrings（与 sqlseed 同款设计）
docs = ["mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.packages.find]
include = ["stability_harness_loop_multiagent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
